// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression tests: scaleMode=array.scaleLinearly size=0 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=20 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=20 iteration=2 1`] = `
"[0,1]
---[0,0]
------[0]
------[0]
---[0]
---[1]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=50 iteration=1 1`] = `
"[1,0]
---[0,0]
------[0]
------[0]
---[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=50 iteration=2 1`] = `"[0]"`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=50 iteration=3 1`] = `
"[0,1,2]
---[0,0,2]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[0,0,1]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[1]
---------[0,1]
------------[0]
------------[1]
---------[0,1]
------------[0]
------------[1]
------[0]
------[0,0]
---------[0]
---------[0]
------[0]
------[2]
------[0,2]
---------[0]
---------[2]
------[0,2]
---------[0]
---------[2]
---[0,1,0]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[0]
------[0,1]
---------[0]
---------[1]
------[1]
------[0]
------[0,0]
---------[0]
---------[0]
------[1,0]
---------[1]
---------[0]
---[0,1,1]
------[0,0,1]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[1]
---------[0,1]
------------[0]
------------[1]
---------[0,1]
------------[0]
------------[1]
------[0,1,0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0]
---------[0,1]
------------[0]
------------[1]
---------[1]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[1,0]
------------[1]
------------[0]
------[0]
------[0,1]
---------[0]
---------[1]
------[1]
------[1]
------[0,1]
---------[0]
---------[1]
------[1,1]
---------[1]
---------[1]
---[0]
---[0,1]
------[0]
------[1]
---[1]
---[2]
---[0,2]
------[0]
------[2]
---[1,2]
------[1]
------[2]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=50 iteration=4 1`] = `
"[1,1,0]
---[0,1,0]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[0]
------[0,1]
---------[0]
---------[1]
------[1]
------[0]
------[0,0]
---------[0]
---------[0]
------[1,0]
---------[1]
---------[0]
---[1,0,0]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[1]
------[1,0]
---------[1]
---------[0]
------[0]
------[0]
------[1,0]
---------[1]
---------[0]
------[0,0]
---------[0]
---------[0]
---[1]
---[1,1]
------[1]
------[1]
---[1]
---[0]
---[1,0]
------[1]
------[0]
---[1,0]
------[1]
------[0]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=50 iteration=5 1`] = `
"[0,0,2]
---[0,0,0]
------[0]
------[0,0]
---------[0]
---------[0]
------[0]
------[0]
------[0,0]
---------[0]
---------[0]
------[0,0]
---------[0]
---------[0]
---[0,0,1]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[0]
------[0,0]
---------[0]
---------[0]
------[0]
------[1]
------[0,1]
---------[0]
---------[1]
------[0,1]
---------[0]
---------[1]
---[0]
---[0,0]
------[0]
------[0]
---[0]
---[2]
---[0,2]
------[0]
------[2]
---[0,2]
------[0]
------[2]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=100 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.scaleLinearly size=100 iteration=2 1`] = `
"[0,1]
---[0,0]
------[0]
------[0]
---[0]
---[1]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=0 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=20 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=20 iteration=2 1`] = `
"[0,1]
---[0,0]
------[0]
------[0]
---[0]
---[1]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=50 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=50 iteration=2 1`] = `
"[0,1]
---[0,0]
------[0]
------[0]
---[0]
---[1]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=50 iteration=3 1`] = `"[0]"`;

exports[`Regression tests: scaleMode=array.unscaled size=50 iteration=4 1`] = `
"[1,1,0,0]
---[0,1,0,0]
------[0,0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
------[0]
------[0,1]
---------[0]
---------[1]
------[0,1,0]
---------[0]
---------[0,1]
------------[0]
------------[1]
---------[1]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[1,0]
------------[1]
------------[0]
------[1]
------[0]
------[0]
------[0,0]
---------[0]
---------[0]
------[0,0]
---------[0]
---------[0]
------[1,0]
---------[1]
---------[0]
------[1,0]
---------[1]
---------[0]
------[0,0]
---------[0]
---------[0]
------[0,1,0]
---------[0]
---------[0,1]
------------[0]
------------[1]
---------[1]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[1,0]
------------[1]
------------[0]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[1,0,0]
---------[1]
---------[1,0]
------------[1]
------------[0]
---------[0]
---------[0]
---------[1,0]
------------[1]
------------[0]
---------[0,0]
------------[0]
------------[0]
---[1,0,0,0]
------[0,0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
---------[0,0,0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0]
------------[0]
------------[0,0]
---------------[0]
---------------[0]
------------[0,0]
---------------[0]
---------------[0]
------[1]
------[1,0]
---------[1]
---------[0]
------[1,0,0]
---------[1]
---------[1,0]
------------[1]
------------[0]
---------[0]
---------[0]
---------[1,0]
------------[1]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[0]
------[0]
------[0]
------[1,0]
---------[1]
---------[0]
------[1,0]
---------[1]
---------[0]
------[0,0]
---------[0]
---------[0]
------[0,0]
---------[0]
---------[0]
------[0,0]
---------[0]
---------[0]
------[1,0,0]
---------[1]
---------[1,0]
------------[1]
------------[0]
---------[0]
---------[0]
---------[1,0]
------------[1]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[1,0,0]
---------[1]
---------[1,0]
------------[1]
------------[0]
---------[0]
---------[0]
---------[1,0]
------------[1]
------------[0]
---------[0,0]
------------[0]
------------[0]
------[0,0,0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0]
---------[0]
---------[0,0]
------------[0]
------------[0]
---------[0,0]
------------[0]
------------[0]
---[1]
---[1,1]
------[1]
------[1]
---[1,1,0]
------[1]
------[1,1]
---------[1]
---------[1]
------[1]
------[0]
------[1,0]
---------[1]
---------[0]
------[1,0]
---------[1]
---------[0]
---[1]
---[0]
---[0]
---[1,0]
------[1]
------[0]
---[1,0]
------[1]
------[0]
---[1,0]
------[1]
------[0]
---[1,0]
------[1]
------[0]
---[0,0]
------[0]
------[0]
---[1,1,0]
------[1]
------[1,1]
---------[1]
---------[1]
------[1]
------[0]
------[1,0]
---------[1]
---------[0]
------[1,0]
---------[1]
---------[0]
---[1,0,0]
------[1]
------[1,0]
---------[1]
---------[0]
------[0]
------[0]
------[1,0]
---------[1]
---------[0]
------[0,0]
---------[0]
---------[0]
---[1,0,0]
------[1]
------[1,0]
---------[1]
---------[0]
------[0]
------[0]
------[1,0]
---------[1]
---------[0]
------[0,0]
---------[0]
---------[0]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=50 iteration=5 1`] = `"[0]"`;

exports[`Regression tests: scaleMode=array.unscaled size=100 iteration=1 1`] = `
"[1]
---[0]"
`;

exports[`Regression tests: scaleMode=array.unscaled size=100 iteration=2 1`] = `
"[0,1]
---[0,0]
------[0]
------[0]
---[0]
---[1]"
`;
